Update blog css

--- a/crescentmax/_data/navigation.yml
+++ b/crescentmax/_data/navigation.yml
@@ -6,15 +6,15 @@ main:
   - title: "Blogs"
     url: "/blogs"
     description: "Notes about game development techniques"
-  - title: "2D Art"
-    url: "/2dart"
-    description: "Pixel art and 2D illustrations"
+  - title: "Art"
+    url: "/art"
+    description: "VFX, Pixel art and 2D illustrations"
   - title: "Resume"
     url: "/resume"
     description: "Resume"
-  - title: "Contact"
-    url: "/contact"
-    description: "Contact Information"
+  - title: "About"
+    url: "/about"
+    description: "About me"
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
