--- a/crescentmax/_config.yml
+++ b/crescentmax/_config.yml
@@ -31,6 +31,7 @@ github_username:  jekyll
 
 # Build settings
 theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: dark
 plugins:
   - jekyll-feed
 include: ["_pages"]
@@ -42,7 +43,36 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      read_time: true
+      share: false
+      related: true
+
+
+year_archive:
+  enabled: false
+
+footer:
+  links:
+    - label: "LinkedIn"
+      url: "https://www.linkedin.com/in/chengyan-tsai-69b804225/"
+      icon: "fab fa-linkedin" # FontAwesome icon class for LinkedIn
+      target: _blank
+    - label: "Itch.io"
+      url: "https://crescentmax.itch.io/"
+      icon: "fab fa-itch-io"  # FontAwesome icon class for itch.io
+      target: _blank
+    - label: "Twitter"
+      url: "https://x.com/crescent_max"
+      icon: "fab fa-twitter"  # FontAwesome icon class for Twitter
+      target: _blank
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
