--- a/_config.yml
+++ b/_config.yml
@@ -24,16 +24,17 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-url: "https://crescentmax.github.io/mypage"  # Update with your repository name
-baseurl: "/mypage"
+url: "https://crescentmax.github.io"  
+baseurl: ""
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: dark
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 include: ["_pages"]
 
 defaults:
