Project page and css updated

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,24 +1,24 @@
-- title: "Del Da Time"
-  image: "/assets/images/project-two.jpg"
-  description: "A brief description of Project Two."
-  url: "/projects/del-da-time"
+- title: "Deal Da Time"
+  image: "/assets/images/projects/deal_da_time/logo.png"
+  description: "A mini puzzle game <br> created for GMTK Jam 2023"
+  url: "https://intoxicat-studio.itch.io/deal-da-time"
 
 - title: "Lucid Dive"
   image: "/assets/images/projects/lucid_dive/MainMenuBg.png"
   description: "A 2D cyberpunk platformer <br> made with Unity"
-  url: "/projects/lucid-dive"
+  url: "https://chocola-mint.itch.io/lucid-dive"
 
 - title: "Orbitone"
-  image: "/assets/images/project-one.jpg"
-  description: "A brief description of Project One."
-  url: "/projects/project-one"
+  image: "/assets/images/projects/orbitone/image.png"
+  description: "A VR rhythm game <br> made with Unity"
+  url: "https://youtu.be/KIr_CQgP_Xo"
 
 - title: "Smol Calli Dungeon"
-  image: "/assets/images/project-one.jpg"
-  description: "A brief description of Project One."
-  url: "/projects/project-one"
+  image: "/assets/images/projects/smol_calli/image.png"
+  description: "A simple 2D game <br> made with Unity"
+  url: "https://youtu.be/jPKp1WAhcMo"
 
 - title: "Operation: Stardust"
   image: "/assets/images/projects/operation_stardust/OBR.png"
-  description: "A 2D turn based strategy game <br> made with cocos"
-  url: "/projects/project-one"
+  description: "A VR rhythm game <br> made with Unity"
+  url: "https://chocola-mint.itch.io/operation-stardust"
