Update project page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Blogs"
     url: "/blogs"
     description: "Notes about game development techniques"
-  - title: "Art"
-    url: "/art"
+  - title: "Arts"
+    url: "/arts"
     description: "VFX, Pixel art and 2D illustrations"
   - title: "Resume"
     url: "/resume"
