--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
+exclude:
+  - minimal-mistakes
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: dark
 plugins:
