--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minimal-mistakes-jekyll
 exclude:
   - minimal-mistakes
-# remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: dark
 plugins:
   - jekyll-feed
