--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,4 @@
-- title: "Unannounced AAA Project (Under Construction)"
+- title: "Unannounced AAA Project"
   image: "/assets/images/projects/AAA/ue.jpg"
   description: "A multiplayer action RPG <br> made with UE5"
   url: "/projects/AAA"
