--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 # LISTEN_GEM_USE_POLLING=1 bundle exec jekyll serve --livereload --force_polling
-
 title: Chengyan Tsai / Max
 email: crescentmax@tamu.edu
 description: >- # this means to ignore newlines until "baseurl:"
@@ -12,10 +11,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minimal-mistakes-jekyll
 exclude:
   - minimal-mistakes
-# remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: dark
 plugins:
   - jekyll-feed
